# django-jenkins-api-template

./: Dockerfile  Jenkinsfile  README.md  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
api/: apps.py  urls.py
api/models/: __init__.py
scripts/: pre-commit.sh  reset.sh  start.sh  watch.sh
server/: asgi.py  urls.py
server/live/: apps.py  urls.py
server/live/views/: live.py
server/settings/: __init__.py
server/settings/components/: __init__.py  common.py  drf.py  logging.py
server/settings/environments/: ci.py  dev.py  prod.py  qa.py
sql/: create_database.sql  drop_database.sql
tests/: conftest.py
tests/test_server/: test_live.py
